# cp2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  cmd_config.rs  cmd_local.rs  cmd_s3.rs  config.rs  copy.rs  lib.rs  main.rs  s3.rs  utils.rs
tests/: cli_tests.rs  copy_tests.rs  parse_destination_tests.rs  s3_tests.rs  utils_tests.rs
