[package]
name = "cp2"
version = "0.2.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colored = { version = "3.0.0", features = ["no-color"] }
dirs = "6"
env_logger = "0.11.8"
indicatif = { version = "0.18.0", features = ["tokio"] }
log = "0.4.28"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
toml = "1"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "sync", "rt", "macros"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
walkdir = "2.5.0"
